# cpp-zig-build-system-demo

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build.zig
cmake/: CMakeLists.txt
src/: main.cpp
